tests/negative/neg_imported_object_subcomponent_assignment.safe
-- Test: neg_imported_object_subcomponent_assignment
-- Description: Imported package-qualified object subcomponents remain read-only in PR08.3.
-- Expected: REJECT unsupported_source_construct

with provider_record_object

package imported_object_subcomponent_assignment_test

   task writer

      loop
         provider_record_object.state.value = 4

